# pyerfa

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  README_REPO_IMPORT.rst  RELEASING.rst  azure-pipelines.yml  erfa_generator.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflows.yml  publish.yml
docs/: api.rst  changelog.rst  conf.py  index.rst  license.rst  quickstart.rst
docs/_static/css/: custom.css
docs/_templates/: layout.html
erfa/: __init__.py  core.py.templ  define_ufunc.templ  define_ufunc_user_dtype.templ  eraLDBODY_ufunc_loop.templ  helpers.py  leap_seconds.py  ufunc.c.templ  ufunc_loop.templ  version.py
erfa/_dev/: __init__.py  scm_version.py
erfa/tests/: helper.py  test_erfa.py  test_ufunc.py.templ
licenses/: README.rst
