[build-system]
requires = [
    "setuptools>=77.0.0",
    "setuptools_scm>=8.0.0",
    "jinja2>=2.10.3",
    "numpy>=2.0.0rc1",
]
build-backend = 'setuptools.build_meta'

[project]
name = "pyerfa"
authors = [{name = "The PyERFA Developers"}]
license = "BSD-3-Clause"
license-files = ["LICENSE.rst"]
description = "Python bindings for ERFA"
readme = "README.rst"
keywords = ["astronomy", "astrophysics", "cosmology", "space", "science", "coordinate"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
urls = {Homepage = "https://github.com/liberfa/pyerfa"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.21.3"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus>=0.7",
]
docs = ["sphinx-astropy>=1.3"]

[tool.setuptools]
# We set packages to find: to automatically find all sub-packages
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["erfa._dev"]
namespaces = false

[tool.setuptools_scm]
version_file = "erfa/_version.py"

[tool.pytest.ini_options]
minversion = "4.6"
testpaths = ["erfa", "docs", "README.rst"]
doctest_plus = "enabled"
doctest_optionflags = """
NORMALIZE_WHITESPACE
ELLIPSIS
FLOAT_CMP
IGNORE_EXCEPTION_DETAIL"""
text_file_format = "rst"
addopts = "--doctest-rst"
xfail_strict = true
norecursedirs = ["erfa/_dev"]

[tool.cibuildwheel]
enable = ["pypy"]
skip = [
    "cp314t-*",
    "cp39-win_arm64",
    "cp310-win_arm64",
]
