[metadata]
name = pyerfa
version=1.7.0
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/liberfa/pyerfa
description = Python bindings for ERFA
long_description = file: README.rst
keywords = astronomy, astrophysics, cosmology, space, science, coordinate
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
requires = numpy
zip_safe = False
install_requires = numpy>=1.16
python_requires = >=3.6

[options.extras_require]
test =
    pytest

[tool:pytest]
minversion = 3.1
testpaths = "erfa"
doctest_plus = enabled
text_file_format = rst
xfail_strict = true

[flake8]
max-line-length = 100

[pycodestyle]
max-line-length = 100
