[metadata]
name = pyerfa
author = The PyERFA Developers
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/liberfa/pyerfa
description = Python bindings for ERFA
long_description = file: README.rst
keywords = astronomy, astrophysics, cosmology, space, science, coordinate
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
requires = numpy
zip_safe = False
tests_require = pytest-doctestplus
setup_requires = setuptools_scm
install_requires = numpy>=1.19
python_requires = >=3.9

[options.packages.find]
exclude = erfa._dev

[options.extras_require]
test =
    pytest
    pytest-doctestplus>=0.7
docs =
    sphinx-astropy>=1.3

[tool:pytest]
minversion = 4.6
testpaths = "erfa" "docs" "README.rst"
doctest_plus = enabled
doctest_optionflags =
    NORMALIZE_WHITESPACE
    ELLIPSIS
    FLOAT_CMP
    IGNORE_EXCEPTION_DETAIL
text_file_format = rst
addopts = --doctest-rst
xfail_strict = true
norecursedirs = 'erfa/_dev'

[flake8]
max-line-length = 100

[pycodestyle]
max-line-length = 100
